- Небольшой рефакторинг